--- a/Unsupervised/FA/factor_analysis.Rmd
+++ b/Unsupervised/FA/factor_analysis.Rmd
@@ -218,7 +218,7 @@ loadings %>%
 
 ```{r}
 plot_loadings <- loadings %>% 
-  dplyr::select(-Max) %>% 
+  # dplyr::select(-Max) %>% 
   gather(key = "Factor", value = "Loading", -Variable, -Group)
 
 plot_loadings %>% 
