fix second subgroup approach

--- a/Supervised/Tree Based Methods/Tree-Methods-Lab.Rmd
+++ b/Supervised/Tree Based Methods/Tree-Methods-Lab.Rmd
@@ -170,7 +170,7 @@ partialPlot(x = fit_rf,
             ylab = "Estimate (mean response)") 
 ```
 
-
+See `rfutilities` package for confidence intervals for partial dependence plots with random forests.
 
 
 ## BART
@@ -400,7 +400,7 @@ combind_data_allmale <- combind_data
 combind_data_allmale[,"male"] <- 1
 
 combind_data_allfemale <- combind_data
-combind_data_allfemale[,"male"] <- 1
+combind_data_allfemale[,"male"] <- 0
 
 
 
